<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

    <EditText
        android:id="@+id/activity_login_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_id_hint"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingBottom="20dp"
        />
    
    <EditText
        android:id="@+id/activity_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/activity_login_password_hint"
        android:inputType="numberPassword"
        android:paddingBottom="20dp" />

    <Button
        android:id="@+id/activity_login_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/activity_login_button"/>

    <TextView
        android:id="@+id/activity_login_register_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register here"
        android:textSize="15dp"
        />


    

</LinearLayout>